# PublicApi_client

./: .gitignore  LICENSE  README.md
PublicApi_client/: CMakeLists.txt  Navigator.qml  main.cpp  main.qml
PublicApi_client/category/: CMakeLists.txt  category_node.cpp  category_node.h  category_tree.cpp  category_tree.h
PublicApi_client/models/: role_to_string.h
PublicApi_client/models/tree/: tree_model.cpp  tree_model.h  tree_node.cpp  tree_node.h
PublicApi_client/web_request/: CMakeLists.txt  web_request.cpp  web_request.h
